GWT Events  - can lookup, can add event properties made session dependent; added can add course-related event property  - Add Event -- added additional contacts  - Events Timetable -- avoid overlapping of events with dates / room names if possible, show dates / room names on printed version  - few other improvements (e.g., more texts are made localizable)

--- a/WebContent/styles/unitime.css
+++ b/WebContent/styles/unitime.css
@@ -268,7 +268,16 @@ h1 {
 	color: #9CB0CE;
 	text-align: right;
 	margin-top: -2px;
+	white-space: nowrap;
 	cursor: pointer;
+}
+
+.unitime-NotClickableHint{
+	font-size: xx-small;
+	font-style: italic;
+	color: #9CB0CE;
+	text-align: right;
+	margin-top: -2px;
 	white-space: nowrap;
 }
 
@@ -2078,6 +2087,10 @@ div.gwt-MenuBarPopup {
 
 .unitime-EventContacts {
 	width: 100%;
+}
+
+.unitime-EventContacts .remove {
+	cursor: pointer;
 }
 
 .unitime-EventMeetings {
